# MnT

./: .gitignore  readme.md
cppstr/: CMakeLists.txt
cppstr/include/mntstr/: ascii_base.hpp  builder.hpp  core.hpp  type.hpp  utf8_view.hpp  view.hpp
cppstr/include/mntstr/base/: TODO.md  base.hpp  case.hpp  delim.hpp  find.hpp  join.hpp  parse.hpp  replace.hpp  split.hpp  trim.hpp
cppstr/test/: test.cpp
